--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3'
 
 services:
   db:
-    image: mysql:5.7
+    image: mysql:8.0
+    platform: linux/amd64
     volumes:
-      - ./db:/var/lib/mysql
+      - dbvol:/var/lib/mysql
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: '1'
       MYSQL_DATABASE: wordpress
@@ -27,7 +28,7 @@ services:
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DEBUG: 0
+      WORDPRESS_DEBUG: 1
       VIRTUAL_HOST: example.com
       LETSENCRYPT_HOST: example.com
       LETSENCRYPT_EMAIL: admin@example.com
@@ -37,8 +38,8 @@ services:
       options:
         max-size: 1m
         max-file: '3'
-    # ports:
-    #   - 5000:80 #プロキシを使う場合はコメントアウト
+    ports:
+      - "${WP_PORT:-80}:80"
 
   # phpmyadmin:
   #   image: phpmyadmin:latest
@@ -84,3 +85,6 @@ networks:
   default:
     name: nginx_net
     external: true
+
+volumes:
+  dbvol:
